classDiagram
    direction LR

    %% User Class
    class User {
      +UUID id
      +String username
      +String email
      +DateTime created_at
      +DateTime updated_at
      +register()
      +update_profile()
    }

    %% Place Class
    class Place {
      +UUID id
      +String title
      +Float price
      +String location
      +DateTime created_at
      +DateTime updated_at
      +create_listing()
      +update_listing()
    }

    %% Amenity Class
    class Amenity {
      +UUID id
      +String name
      +String description
      +DateTime created_at
      +DateTime updated_at
    }

    %% Review Class
    class Review {
      +UUID id
      +Integer rating
      +String comment
      +DateTime created_at
      +DateTime updated_at
      +submit_review()
    }

    %% Relationships
    User "1" o-- "0..*" Place : owns
    User "1" --> "0..*" Review : writes
    Place "1" --> "0..*" Review : receives
    Place "1" o-- "0..*" Amenity : includes
